--- a/installer/index.html
+++ b/installer/index.html
@@ -142,6 +142,14 @@
             >
                 <el-link href="http://127.0.0.1" type="success" target="_blank">安装视频教程</el-link>
             </el-alert>
+            <el-alert
+                    style="margin-top: 10px"
+                    v-if="install_status == 2"
+                    title="安装失败，返回重试"
+                    type="error"
+                    show-icon
+            >
+            </el-alert>
             <el-descriptions :column="1" border style="margin-top: 10px" v-loading="loading">
                 <el-descriptions-item label="安装过程" label-align="right" align="center" label-class-name="label-item">
                     <pre class="install-content" v-html="composer_install" ref="terminal" ></pre>
@@ -149,10 +157,12 @@
             </el-descriptions>
 
         </div>
-        <el-button style="margin-top: 12px" @click="check" v-if="active == 1" type="primary" :loading="loading">重新检测</el-button>
-        <el-button style="margin-top: 12px" @click="prev"  v-if="active > 1 && active < 4">上一步</el-button>
-        <el-button style="margin-top: 12px" @click="prev"  v-if="install_status == 2">返回</el-button>
-        <el-button style="margin-top: 12px" @click="next" :disabled="buttonStatus" type="primary" :loading="loading"  v-if="active < 4">{{active==3?'安装':'下一步'}}</el-button>
+        <div style="text-align: center;">
+            <el-button style="margin-top: 12px" @click="check" v-if="active == 1" type="primary" :loading="loading">重新检测</el-button>
+            <el-button style="margin-top: 12px" @click="prev"  v-if="active > 1 && active < 4">上一步</el-button>
+            <el-button style="margin-top: 12px" @click="prev"  v-if="install_status == 2">返回</el-button>
+            <el-button style="margin-top: 12px" @click="next" :disabled="buttonStatus" type="primary" :loading="loading"  v-if="active < 4">{{active==3?'安装':'下一步'}}</el-button>
+        </div>
     </div>
 </div>
 <script>
@@ -190,7 +200,7 @@
                 if(this.active == 1 && this.info &&  this.info.check){
                     return false
                 }else if(this.active == 2 && this.frame_status == 1){
-                    return false
+                    return true
                 }
                 return false
             }
@@ -287,6 +297,7 @@
                 }
             },
             prev(){
+                this.install_status = 0
                 this.active--
             }
         }
